--- a/jed2.html
+++ b/jed2.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="jed2.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Exercise</title>
 </head>
 <body>
@@ -28,7 +31,7 @@
     </div> -->
 
     <!-- ----- Exercise2 ----- -->
-    <div class="bground">
+    <!-- <div class="bground">
         <div class="aall">
             <div class="texts">
                 <div class="div1">
@@ -63,6 +66,34 @@
                 </div>
             </div>
         </div>
+    </div> -->
+
+    <!-- ----- Exercise3 ----- -->
+    <!-- <div class="header">
+        <p>Header</p>
     </div>
+    <div class="link">
+        <ul>
+            <li>Link</li>
+            <li>Link</li>
+            <li>Link</li>
+        </ul>
+    </div>
+    <main>
+        <div class="column">
+            <h2>Column</h2>
+            <p>Lorem ipsum...</p>
+        </div>
+        <div class="column">
+            <h2>Column</h2>
+            <p>Lorem ipsum...</p>
+        </div>
+        <div class="column">
+            <h2>Column</h2>
+            <p>Lorem ipsum...</p>
+        </div>
+    </main> -->
+    
+    <span></span>
 </body>
 </html>
