--- a/exercise3.html
+++ b/exercise3.html
@@ -8,28 +8,28 @@
 </head>
 <body>
     <div class="all">
-        <div class="container purple">
+        <div class="div purple">
             <img src="https://img.icons8.com/plasticine/2x/sim-card-chip.png" alt="crd">
             <p class="number">4500 6812 5512 6089</p>
             <p class="name">ALEKSEEV IVAN</p>
             <p class="val">Valid thru:</p>
             <p class="date">07/22</p>
         </div>
-        <div class="container green">
+        <div class="div green">
             <img src="https://img.icons8.com/plasticine/2x/sim-card-chip.png" alt="crd">
             <p class="number">4500 6812 5512 6089</p>
             <p class="name">ALEKSEEV IVAN</p>
             <p class="val">Valid thru:</p>
             <p class="date">07/22</p>
         </div>
-        <div class="container blue">
+        <div class="div blue">
             <img src="https://img.icons8.com/plasticine/2x/sim-card-chip.png" alt="crd">
             <p class="number">4500 6812 5512 6089</p>
             <p class="name">ALEKSEEV IVAN</p>
             <p class="val">Valid thru:</p>
             <p class="date">07/22</p>
         </div>
-        <div class="container black">
+        <div class="div black">
             <img src="https://img.icons8.com/plasticine/2x/sim-card-chip.png" alt="crd">
             <p class="number">4500 6812 5512 6089</p>
             <p class="name">ALEKSEEV IVAN</p>
