--- a/jed2.html
+++ b/jed2.html
@@ -10,6 +10,33 @@
     <title>Exercise</title>
 </head>
 <body>
-     
+    <header>
+        <h1>My Website</h1>
+        <p>With a flexible layout</p>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section class="div1">
+            <h2>About Me</h2>
+            <p>Photo of me:</p>
+            <div class="image1">
+                <p>Image</p>
+            </div>
+        </section>
+        <section class="div2">
+            <h2>Title Heading</h2>
+            <p>Title description, Dec 7, 2017</p>
+            <div class="image2">
+                <p>Image</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
